--- a/Periodic notes/Daily notes/2023-05-06.md
+++ b/Periodic notes/Daily notes/2023-05-06.md
@@ -13,6 +13,6 @@ Today I will try to relax, go to the gym.
 ## Todos
 - [ ] Buy birthday present for dad. Maybe airpods?
 - [ ] Clean the apartment
-- [ ] Manage the laundry
+- [x] Manage the laundry
 - [ ] Buy groceries
 - [ ] File bank papers
