--- a/Periodic notes/Daily notes/2023-05-07.md
+++ b/Periodic notes/Daily notes/2023-05-07.md
@@ -4,8 +4,9 @@ Created-date: 2023-05-07
 [[Daily note template]]
 
 # Agenda
-Today dad and I are going to the [[Driving range]] to hit some golf balls. Dad has just received his new golf clubs. 
+Today dad and I are going to the [[World of Golf]] to hit some golf balls. Dad has just received his new golf clubs. 
 Then we are going to pickup Mom and Lilly and go eat lunch at [[Villa bel Parc]]. 
+Instead of [[Villa bel Parc]] we are going down to [[Salomons]] and look at their new house. 
 
 # Notes
 
