updated daily and added new people

--- a/Periodic notes/Daily notes/2023-05-07.md
+++ b/Periodic notes/Daily notes/2023-05-07.md
@@ -4,14 +4,17 @@ Created-date: 2023-05-07
 [[Daily note template]]
 
 # Agenda
-Today dad and I are going to the [[World of Golf]] to hit some golf balls. Dad has just received his new golf clubs. 
-Then we are going to pickup Mom and Lilly and go eat lunch at [[Villa bel Parc]]. 
-Instead of [[Villa bel Parc]] we are going down to [[Salomons]] and look at their new house. 
+Today [[Dad]] and I are going to the [[World of Golf]] to hit some golf balls. Dad has just received his new golf clubs. 
+Then we are going to pickup [[Mom]] and [[Lilly]] and go eat lunch at [[Villa bel Parc]].
 
 # Notes
+[[Dad]]'s new golf clubs were excellent. I could hit farther and straighter with them than with my own. He hinted that it might be a good birtday present next year. 
+Instead of [[Villa bel Parc]] we headed down to [[Klasse Salomons Celbrot]] and [[Miriam Salomons Celbrot]] and look at their new house. And [[Lilly]] and [[Chaplin]] could play. Their house was really nice with a great big kitchen. 
+[[Mom]] and [[Dad]] hinted that they might be intereseted in buying [[Carolina Lindblom]] and [[Niklas Lindblom]]'s house if they get to take over [[Anders Lindahl]] 's house. But I am not to discuss that with the others since it is not clear yet. 
+[[Miriam Salomons Celbrot]] recommended that we visit Hördalen to walk
 
 ## Ideas
 Idea::
 
 ## Todos
-- [ ] 
+- [ ] Plan my birthday
